--- a/404.md
+++ b/404.md
@@ -4,6 +4,9 @@ title: 404 - Page not found
 permalink: /404.html
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+找不到你访问的页面，可能访问地址错误，也可能原有资源已迁移或删除了。
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+[点击返回主页]({{ site.baseurl }}/)
+
+
+[<img src="/images/404.jpg" style="width: 400px;"/>]({{ site.baseurl }}/)
