--- a/404.md
+++ b/404.md
@@ -1,12 +1,11 @@
 ---
 layout: page
-title: 404 - Page not found
+title: 404 糟糕，找不到网页了。。。
 permalink: /404.html
 ---
 
-找不到你访问的页面，可能访问地址错误，也可能原有资源已迁移或删除了。
+可能地址错误，也可能原有资源已迁移或已删除。
 
 [点击返回主页]({{ site.baseurl }}/)
 
-
-[<img src="/images/404.jpg" style="width: 400px;"/>]({{ site.baseurl }}/)
+![404](/images/404.png)
